fixed navbar on mobile

--- a/app/assets/stylesheets/global/custom.css.scss
+++ b/app/assets/stylesheets/global/custom.css.scss
@@ -199,7 +199,6 @@ input {
  }
 
 .mobileappcontainer {
-  position:absolute;
   top: 60px;
   left: 0px;
 }
